sample/retrieveUnpackaged/objects/Person_Customer_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Person_Customer_Relations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <label>Portal Permission</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Person_Customer_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Specify_Other__c</fullName>
        <label>Specify Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Type__c</fullName>
        <label>Third Party Type</label>
        <picklist>
            <picklistValues>
                <fullName>Real Estage Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owners Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Third Party Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Person__c</columns>
        <columns>Customer__c</columns>
        <columns>Third_Party_Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Link-{000000000}</displayFormat>
        <label>3rd Party</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>